test_cases/pass/p29.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT r
r=7/2
PRINT: r
END SCRIPT
