test_cases/fail/f19.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT FOR
END SCRIPT
